# binance_watcher

./: Cargo.toml  README.md
src/: console_arguments.rs  main.rs  messages.rs  order_book.rs
