[package]
name = "binance_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
futures-util = "0.3.29"
serde_json = "1.0.61"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.30", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
reqwest = "0.12.12"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }